Updated Google Maps Config

--- a/basic/src/config.json
+++ b/basic/src/config.json
@@ -6,14 +6,35 @@
     "loadJQuery": false
   },
   "googleLoadOptions": {
-    "key": ""
+    "key": "AIzaSyCOtRab6Lh2pNn7gYxvAqN5leETC24OXYQ"
   },
   "googleMapsOptions": {
     "center": {
       "lat": 51.53,
       "lng": -0.185
     },
-    "zoom": 10
+    "zoom": 10,
+    "mapTypeControl": false,
+    "fullscreenControl": false,
+    "styles": [
+      {
+        "featureType": "poi",
+        "stylers": [
+          {
+            "visibility": "off"
+          }
+        ]
+      },
+      {
+        "featureType": "transit",
+        "elementType": "labels.icon",
+        "stylers": [
+          {
+            "visibility": "off"
+          }
+        ]
+      }
+    ]
   },
   "markersOptions": {
     "style": {
